--- a/src/styles/partials/ThemeControls.module.scss
+++ b/src/styles/partials/ThemeControls.module.scss
@@ -6,25 +6,30 @@ ul {
 }
 
 .themeControls {
+    box-sizing: border-box;
     @include flex;
     background: $panel;
     position: fixed;
-    top: 50%;
-    right: -3em;
-    transform: translateY(-50%);
-    padding: 1em;
+    top: 20%;
+    width: 50px;
+    right: -50px;
+    padding: 15px;
+    padding-right: 25px;
     z-index: 3;
     flex-direction: column;
     gap: 1.5em;
     transition: 0.3s;
+    border: 5px solid $highlight_color;
+    border-right: none;
+    border-radius: 10px;
 }
 
 .themeBtn {
     position: absolute;
     top: 50%;
-    left: -2.5em;
+    left: -45px;
     transform: translateY(-50%);
-    padding: 0.5em;
+    padding: 10px;
     background: $panel;
     color: $text-primary;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
@@ -33,14 +38,24 @@ ul {
     gap: 0.5em;
 }
 
+.darkMode {
+    color: $text-primary;
+    transition: all 0.2s;
+}
+
 .themeBtn:hover {
-    background: $primary;
+    background: $highlight_color;
 }
 
 .color {
-    width: 0.7em;
-    height: 0.7em;
-    border-radius: 50%;
+    width: 1rem;
+    height: 1rem;
+    border-radius: 25%;
+    transition: all 0.2s;
+}
+.color:hover,
+.darkMode:hover {
+    transform: scale(1.5);
 }
 
 .color1 {
@@ -60,10 +75,6 @@ ul {
     color: #189f21;
 }
 
-.darkMode {
-    color: $text-primary;
-}
-
 .color,
 .darkMode,
 .themeBtn {
@@ -71,5 +82,5 @@ ul {
 }
 
 .themeOpen {
-    right: 0;
+    right: -10px;
 }
