--- a/src/styles/partials/tenziDescription.module.scss
+++ b/src/styles/partials/tenziDescription.module.scss
@@ -91,17 +91,82 @@
     box-sizing: border-box;
     width: 100%;
     margin: 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 0;
+    margin: 0 auto;
 }
 .techSection {
     box-sizing: border-box;
     margin: 0;
-    // width: 400px;
     @include flex;
     flex-direction: column;
-    // border-radius: 0.5rem;
-    // box-shadow: 0px 0px 4px 0px $highlight_color;
-    padding: 10px;
-    // background-color: rgba(0, 0, 0, 0.05);
+    padding: 50px 0;
+    width: 100%;
+    height: 600px;
+    position: relative;
+}
+
+.techSection:nth-child(even) {
+    justify-content: flex-end;
+    border-left: 4px solid $highlight_color;
+    padding-left: 3em;
+    transform: translateX(-2px);
+}
+
+.techSection:nth-child(odd) {
+    justify-content: flex-start;
+    border-right: 4px solid $highlight_color;
+    padding-right: 3em;
+    transform: translateX(2px);
+}
+
+.techSection:nth-child(even)::before,
+.techSection:nth-child(odd)::before {
+    content: "";
+    background: $highlight_color;
+    width: 3em;
+    height: 3px;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.techSection:nth-child(even)::before {
+    top: 75%;
+    left: 0;
+}
+
+.techSection:nth-child(odd)::before {
+    top: 25%;
+    right: 0;
+}
+
+.techSection:nth-child(even) div::before,
+.techSection:nth-child(odd) div::before {
+    content: "";
+    background: $highlight_color;
+    box-shadow: 0 0 0.5em $highlight_color;
+    width: 0.8em;
+    height: 0.8em;
+    position: absolute;
+    transform: translateY(-50%);
+    border-radius: 50%;
+}
+
+.techSection:nth-child(even) div::before {
+    top: 75%;
+    left: -0.5em;
+}
+
+.techSection:nth-child(odd) div::before {
+    top: 25%;
+    right: -0.5em;
+}
+
+.techSection:last-child {
+    margin: 0;
+    height: auto;
 }
 
 .techSection h4 {
@@ -122,89 +187,31 @@
     cursor: zoom-in;
 }
 
-.timeline {
-    margin: 2em auto;
-    max-width: 34.15em;
-}
-
-.checkpoint {
-    max-width: 34em;
-    padding-top: 2em;
-    padding-bottom: 2em;
-    position: relative;
-}
-
-.checkpoint:nth-child(odd) {
-    border-left: 4px solid $highlight_color;
-    padding-left: 3em;
-    transform: translateX(270px);
-}
-
-.checkpoint:nth-child(even) {
-    border-right: 4px solid $highlight_color;
-    padding-right: 3em;
-    transform: translateX(-270px);
-}
-
-.checkpoint:nth-child(odd)::before,
-.checkpoint:nth-child(even)::before {
-    content: "";
-    background: $highlight_color;
-    width: 3em;
-    height: 3px;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-}
-
-.checkpoint:nth-child(odd)::before {
-    left: 0;
-}
-
-.checkpoint:nth-child(even)::before {
-    right: 0;
-}
-
-.checkpoint:nth-child(odd) div::before,
-.checkpoint:nth-child(even) div::before {
-    content: "";
-    background: $highlight_color;
-    box-shadow: 0 0 0.5em $highlight_color;
-    width: 0.8em;
-    height: 0.8em;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    border-radius: 50%;
-}
-
-.checkpoint:nth-child(odd) div::before {
-    left: -0.5em;
-}
-
-.checkpoint:nth-child(even) div::before {
-    right: -0.5em;
-}
-
-@media screen and (max-width: 1150px) {
-    .timeline {
+@media screen and (max-width: 800px) {
+    .branchSection {
+        margin-top: 50px;
         width: 80vw;
+        grid-template-columns: 1fr;
     }
-    .timeline .checkpoint {
+    .techSection {
+        padding: 50px 0;
+        height: auto;
+    }
+    .branchSection .techSection {
         width: 100%;
         transform: none;
         padding-left: 0;
         padding-right: 0;
         border: none;
     }
-    .timeline .checkpoint::before {
+    .branchSection .techSection::before {
         width: 3px;
         height: 3em;
         top: -1.5em;
         left: 50%;
         transform: translateX(-50%);
     }
-    .timeline .checkpoint div::before {
+    .branchSection .techSection div::before {
         top: -0.5em;
         left: 50%;
         transform: translateX(-50%);
