--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -18,7 +18,7 @@ body {
     cursor: default;
 }
 
-.background {
+#background {
     position: fixed;
     top: 0;
     left: 0;
@@ -28,7 +28,7 @@ body {
     background: $primary;
 }
 
-.gradientBackground {
+#gradientBackground {
     position: fixed;
     top: 0;
     left: 0;
